--- a/ui/rsc-ui/style/style.css
+++ b/ui/rsc-ui/style/style.css
@@ -1,3 +1,8 @@
+AdditiveWavetableUi {
+  qproperty-margin: 10;
+  qproperty-xGridShown: false;
+  qproperty-yGridShown: false; }
+
 AnthemUi {
   background: #27272B;
   min-width: 1020px;
@@ -110,9 +115,6 @@ Creator ComboBox {
     Creator ComboBox QListView::item {
       min-width: 35px;
       max-width: 35px; }
-Creator WavetableUi {
-  qproperty-margin: 10;
-  qproperty-gridStyle: 0; }
 
 #CreatorGenerateButton {
   font-size: 24px; }
@@ -263,7 +265,7 @@ PanUi, MacroUi, #VolumeUi {
   font-size: 35px; }
 
 PartialsUi {
-  min-height: 350px;
+  min-height: 300px;
   qproperty-barColor: transparent;
   qproperty-barWidth: 30;
   qproperty-displayFactor: 100;
